Subcategories box with border fixed on mobile version

--- a/theme.css
+++ b/theme.css
@@ -958,7 +958,7 @@ pre code {
   }
 
   #carousel .carousel-inner {
-    height: min-content;
+    height: 250px;
   }
 }
 @media (min-width: 576px) {
@@ -1361,10 +1361,13 @@ pre code {
   width: 41.66667%;
 }
 @media (min-width: 480px){
-.col-xs-6 {
-  float: left;
-  width: 50%;
-}
+  .col-xs-6 {
+    float: left;
+    width: 50%;
+  }
+  #subcategories ul li {
+    min-width: 100px;    
+  }
 }
 .col-xs-7 {
   float: left;
@@ -4187,7 +4190,7 @@ tbody.collapse.in {
 	}
   .img-fluid, .carousel-inner > .carousel-item > img, .carousel-inner > .carousel-item > a > img {
     max-width: 150%;
-    height: auto;
+    height: max-content;
   }
 }
 @media (min-width: 768px) {
@@ -5768,7 +5771,8 @@ button.close {
   border-width: 10px;
 }
 .carousel {
-  position: relative;
+  position: relative; 
+  height: max-content;
 }
 .carousel-inner {
   position: relative;
@@ -8548,7 +8552,7 @@ body#checkout #hook-display-after-carrier > [class^="col"].links .row > [class^=
 
 
 .carousel .carousel-item {
-  height: 100%;
+  /*height: 100%;*/
   text-align: center;
 }
 .carousel .carousel-item img {
@@ -9535,6 +9539,7 @@ body#checkout #hook-display-after-carrier > [class^="col"].links .row > [class^=
   margin-bottom: 20px;
   border: 2px solid #800000;
   border-radius: 4px;
+  padding: .7em;
 }
 #subcategories .subcategory-heading {
   margin-bottom: 20px;
